--- a/public/frontend/custom.css
+++ b/public/frontend/custom.css
@@ -132,3 +132,18 @@
 .area-bg-four {
     padding: 90px 0 90px;
 }
+
+.blog-details-bottom .blog-post-share {
+    justify-content: flex-start;
+}
+
+.sidebar-search form input {
+    background: rgb(255 188 0 / 15%);
+}
+
+.carousel-inner {
+    width: 100%;
+    height: 400px !important;
+    border-radius: 10px;
+    object-fit: cover;
+}
